# ComputationalHealthcare

./: .gitignore  README.md  fabfile.py
blog/: introduction.ipynb  ohdsi.ipynb  ohdsi.proto  ohdsi_pb2.py  ventriculostomy.ipynb
chlib/: __init__.py
chlib/codes/: __init__.py  strings.json
chlib/cppcode/: CMakeLists.txt  main.cpp
chlib/cppcode/audit/: auditor.cpp  auditor.h
chlib/cppcode/cindexer/: cindexer.cpp  cindexer.h
chlib/cppcode/cmake/Modules/: FindGlog.cmake  FindLevelDB.cmake
chlib/cppcode/indexer/: indexer.cpp  indexer.h
chlib/cppcode/protos/: penums.pb.cc  penums.pb.h  pn1.pb.cc  pn1.pb.h  pn2.pb.cc  pn2.pb.h  pn3.pb.cc  pn3.pb.h  pn4.pb.cc  pn4.pb.h  pn5.pb.cc  pn5.pb.h  pstat.pb.cc  pstat.pb.h  pvisit.pb.cc  pvisit.pb.h
chlib/cppcode/verify/: verify.cpp  verify.h
chlib/data/: __init__.py  extractor.py
chlib/entity/: __init__.py  aggregate.py  enums.py  paudit_pb2.py  penums_pb2.py  pn1_pb2.py  pn2_pb2.py  pn3_pb2.py  pn4_pb2.py  presentation.py  pstat_pb2.py  pvisit_pb2.py  stream_pb.py  visit.py
chlib/entity/protocols/: penums.proto  pn1.proto  pn2.proto  pn3.proto  pn4.proto  pstat.proto  pvisit.proto
chlib/formats/: __init__.py
chlib/formats/hcupnrd/: __init__.py
chlib/formats/texas/: __init__.py  schema.py
docker/: Dockerfile  build.sh  config.json  exec_shell.sh  prepare_nrd.sh  prepare_tx.sh  remove_containers.sh  start.sh  stop.sh
