cmake_minimum_required(VERSION 3.2)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
project(analysis)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp json11/json11.cpp json11/json11.hpp verify/verify.cpp verify/verify.h audit/auditor.cpp audit/auditor.h cindexer/cindexer.cpp cindexer/cindexer.h)
find_package(Protobuf REQUIRED)
find_package (Threads)
find_package(Glog REQUIRED)
find_package(LevelDB REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${GLOG_INCLUDE_DIRS})
include_directories(${LEVELDB_INCLUDE})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_executable(cpp ${SOURCE_FILES} ${PROTO_SRCS} ${PROTO_HDRS} pystring/pystring.h protos/penums.pb.h protos/pn1.pb.h protos/pn2.pb.h protos/pstat.pb.h protos/pvisit.pb.h pystring/pystring.cpp protos/penums.pb.cc protos/pn1.pb.cc protos/pn2.pb.cc protos/pstat.pb.cc protos/pvisit.pb.cc indexer/indexer.h indexer/indexer.cpp  json11/json11.cpp json11/json11.hpp verify/verify.cpp verify/verify.h audit/auditor.cpp audit/auditor.h)
target_link_libraries(cpp ${PROTOBUF_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${GLOG_LIBRARIES} ${LEVELDB_LIBS})